Fix split pane overflow scroll and headers
Currently, minimising the screen will cause some text
misalignment and truncation of information.

This might affect the user's ease of viewing.

Let's include the following changes:
* a scroll pane in the middle panel to allow overflow scrolling
* headers for each panel to indicate each panel's use
* larger default window size for the gui app
* extend the feedback box to have a larger minimum height

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -431,6 +431,40 @@
     -fx-padding: 10 10 10 0;
 }
 
+// ************* candidate panel header css *************
+.candidate-panel-header {
+    -fx-background-color: #3c3e3f;
+}
+
+.candidate-panel-title {
+    -fx-font-size: 16px;
+    -fx-text-fill: white;
+    -fx-font-family: "Segoe UI Light";
+}
+
+// ************* focus panel header css *************
+.focus-panel-header {
+    -fx-background-color: #3c3e3f;
+}
+
+.focus-panel-title {
+    -fx-font-size: 16px;
+    -fx-text-fill: white;
+    -fx-font-family: "Segoe UI Light";
+}
+
+#focus-card-label {
+    -fx-padding: 0 0 0 15;
+}
+
+#focus-card-scroll-pane {
+    -fx-background-color: #3c3e3f;
+    -fx-border-width: 0;
+}
+
+#focus-card-scroll-pane > .viewport {
+    -fx-background-color: #3c3e3f;
+}
 
 // ************* interview panel css *************
 .interview-panel-header {
